--- a/index.html
+++ b/index.html
@@ -5,64 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Booking Control System</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
 
-      * {
-        font-family: "Inter", sans-serif;
-      }
+    <!-- Import Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@300;400;500;600;700&family=Noto+Sans:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
-      .gradient-bg {
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      }
-
-      .glass-effect {
-        background: rgba(255, 255, 255, 0.95);
-        backdrop-filter: blur(10px);
-        border: 1px solid rgba(255, 255, 255, 0.2);
-      }
-
-      .btn-primary {
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        transition: all 0.3s ease;
-      }
-
-      .btn-primary:hover {
-        transform: translateY(-2px);
-        box-shadow: 0 10px 20px rgba(102, 126, 234, 0.3);
-      }
-
-      .input-field {
-        transition: all 0.3s ease;
-      }
-
-      .input-field:focus {
-        transform: translateY(-2px);
-        box-shadow: 0 4px 12px rgba(102, 126, 234, 0.2);
-      }
-
-      .sidebar-item {
-        transition: all 0.3s ease;
-      }
-
-      .sidebar-item:hover {
-        background: rgba(102, 126, 234, 0.1);
-        transform: translateX(4px);
-      }
-
-      .sidebar-item.active {
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        color: white;
-      }
-
-      .page-container {
-        display: none;
-      }
-
-      .page-container.active {
-        display: block;
-      }
-    </style>
+    <!-- Centralized Styles -->
+    <?!= include('style'); ?>
   </head>
   <body class="bg-gray-50">
     <!-- Main App Container -->
@@ -72,6 +25,57 @@
     <div id="toastContainer" class="fixed top-4 right-4 z-50"></div>
 
     <script>
+      // ========================================
+      // SESSION MANAGEMENT (Client-Side)
+      // ========================================
+
+      /**
+       * Save Session to localStorage
+       */
+      function saveSession(sessionData) {
+        localStorage.setItem("bookingSession", JSON.stringify(sessionData));
+      }
+
+      /**
+       * Get Session from localStorage
+       */
+      function getSessionFromStorage() {
+        const sessionString = localStorage.getItem("bookingSession");
+        if (!sessionString) return null;
+
+        try {
+          const session = JSON.parse(sessionString);
+
+          // ตรวจสอบว่า Session หมดอายุหรือไม่ (24 ชั่วโมง)
+          const now = new Date().getTime();
+          const sessionAge = now - session.loginTime;
+          const maxAge = 24 * 60 * 60 * 1000; // 24 hours
+
+          if (sessionAge > maxAge) {
+            clearSessionStorage();
+            return null;
+          }
+
+          return session;
+        } catch (error) {
+          return null;
+        }
+      }
+
+      /**
+       * Clear Session from localStorage
+       */
+      function clearSessionStorage() {
+        localStorage.removeItem("bookingSession");
+      }
+
+      /**
+       * Check if User is Logged In
+       */
+      function isLoggedIn() {
+        return getSessionFromStorage() !== null;
+      }
+
       // ========================================
       // GLOBAL VARIABLES & STATE
       // ========================================
@@ -85,34 +89,42 @@
       /**
        * Toast Notification Function
        */
-      function showToast(message, type = "success") {
+      function showToast(message, type = "success", duration = 3000) {
         const toast = document.createElement("div");
         const bgColor = type === "success" ? "bg-green-500" : "bg-red-500";
+        const icon =
+          type === "success"
+            ? '<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>'
+            : '<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"></path>';
 
-        toast.className = `${bgColor} text-white px-6 py-4 rounded-lg shadow-lg mb-4 transform transition-all duration-300 translate-x-full`;
+        toast.className = `${bgColor} text-white px-6 py-4 rounded-lg shadow-2xl mb-4 transform transition-all duration-500 translate-x-full hover:scale-105 cursor-pointer`;
         toast.innerHTML = `
         <div class="flex items-center space-x-3">
-          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            ${
-              type === "success"
-                ? '<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>'
-                : '<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>'
-            }
+          <svg class="w-6 h-6 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            ${icon}
           </svg>
-          <span>${message}</span>
+          <span class="font-medium">${message}</span>
         </div>
       `;
 
+        // คลิกเพื่อปิด Toast
+        toast.addEventListener("click", function () {
+          toast.classList.add("translate-x-full");
+          setTimeout(() => toast.remove(), 300);
+        });
+
         document.getElementById("toastContainer").appendChild(toast);
 
+        // แสดง Toast
         setTimeout(() => {
           toast.classList.remove("translate-x-full");
         }, 100);
 
+        // ซ่อน Toast อัตโนมัติ
         setTimeout(() => {
           toast.classList.add("translate-x-full");
           setTimeout(() => toast.remove(), 300);
-        }, 3000);
+        }, duration);
       }
 
       /**
@@ -149,17 +161,36 @@
 
         google.script.run
           .withSuccessHandler(function (html) {
+            // แยก HTML และ Script
+            const tempDiv = document.createElement("div");
+            tempDiv.innerHTML = html;
+
+            // ดึง scripts ออกมา
+            const scripts = tempDiv.querySelectorAll("script");
+
+            // ใส่ HTML (ไม่รวม script)
             app.innerHTML = html;
 
-            // Initialize page-specific functions
-            if (pageName === "login" && typeof initLoginPage === "function") {
-              initLoginPage();
-            } else if (
-              pageName === "main" &&
-              typeof initMainApp === "function"
-            ) {
-              initMainApp();
-            }
+            // Execute scripts manually
+            scripts.forEach((oldScript) => {
+              const newScript = document.createElement("script");
+
+              // Copy attributes
+              Array.from(oldScript.attributes).forEach((attr) => {
+                newScript.setAttribute(attr.name, attr.value);
+              });
+
+              // Copy content
+              newScript.textContent = oldScript.textContent;
+
+              // Append to body to execute
+              document.body.appendChild(newScript);
+
+              // Remove after execution
+              setTimeout(() => {
+                document.body.removeChild(newScript);
+              }, 10);
+            });
           })
           .withFailureHandler(function (error) {
             app.innerHTML = `<div class="p-8 text-center text-red-600">เกิดข้อผิดพลาด: ${error.message}</div>`;
@@ -235,6 +266,8 @@
       function logout() {
         google.script.run
           .withSuccessHandler(function (response) {
+            clearSessionStorage();
+            currentUser = null;
             showToast(response.message, "success");
             setTimeout(() => {
               loadPage("login");
@@ -248,20 +281,45 @@
       // ========================================
 
       window.onload = function () {
-        // Check if user is logged in
-        google.script.run
-          .withSuccessHandler(function (response) {
-            if (response.success) {
-              currentUser = response.data;
-              loadPage("main");
-            } else {
+        // Get initial page from server (if passed via doGet)
+        const initialPage = "<?= initialPage ?>";
+
+        // Check if user is logged in from localStorage
+        const session = getSessionFromStorage();
+
+        if (session && session.sessionToken) {
+          // Validate session with server
+          google.script.run
+            .withSuccessHandler(function (response) {
+              if (response.success) {
+                currentUser = response.data;
+
+                // Load main page
+                loadPage("main");
+
+                // Set hash if initialPage is provided
+                if (
+                  initialPage &&
+                  initialPage !== "null" &&
+                  initialPage !== ""
+                ) {
+                  setTimeout(() => {
+                    window.location.hash = initialPage;
+                  }, 100);
+                }
+              } else {
+                clearSessionStorage();
+                loadPage("login");
+              }
+            })
+            .withFailureHandler(function () {
+              clearSessionStorage();
               loadPage("login");
-            }
-          })
-          .withFailureHandler(function () {
-            loadPage("login");
-          })
-          .getCurrentUser();
+            })
+            .getCurrentUser(session.sessionToken);
+        } else {
+          loadPage("login");
+        }
       };
     </script>
   </body>
