--- a/PageLocations.html
+++ b/PageLocations.html
@@ -127,7 +127,7 @@
                 class="w-10 h-10 border-4 border-purple-100 border-t-purple-600 rounded-full animate-spin"
               ></div>
               <p class="text-gray-400 text-sm font-medium animate-pulse">
-                กำลังโหลดข้อมูล...
+                กำลังดึงข้อมูลสถานที่...
               </p>
             </div>
           </td>
@@ -507,7 +507,7 @@
         <td colspan="5" class="px-6 py-12 text-center">
           <div class="flex flex-col items-center justify-center space-y-3">
             <div class="w-10 h-10 border-4 border-purple-100 border-t-purple-600 rounded-full animate-spin"></div>
-            <p class="text-gray-400 text-sm font-medium animate-pulse">กำลังโหลดข้อมูล...</p>
+            <p class="text-gray-400 text-sm font-medium animate-pulse">กำลังดึงข้อมูลสถานที่...</p>
           </div>
         </td>
       </tr>
@@ -516,7 +516,7 @@
       <div class="col-span-full py-12 text-center">
         <div class="flex flex-col items-center justify-center space-y-3">
           <div class="w-10 h-10 border-4 border-purple-100 border-t-purple-600 rounded-full animate-spin"></div>
-          <p class="text-gray-400 text-sm font-medium animate-pulse">กำลังโหลด...</p>
+          <p class="text-gray-400 text-sm font-medium animate-pulse">กำลังดึงข้อมูลสถานที่...</p>
         </div>
       </div>
     `;
