--- a/login.html
+++ b/login.html
@@ -177,17 +177,17 @@
       </form>
 
       <!-- Divider -->
-      <div class="relative my-6">
+      <!-- <div class="relative my-6">
         <div class="absolute inset-0 flex items-center">
           <div class="w-full border-t border-gray-200"></div>
         </div>
         <div class="relative flex justify-center text-sm">
           <span class="px-4 bg-white text-gray-500">หรือ</span>
         </div>
-      </div>
+      </div> -->
 
       <!-- Quick Login (Demo) -->
-      <div class="space-y-3">
+      <!-- <div class="space-y-3">
         <p class="text-xs text-center text-gray-500 mb-3">ทดสอบระบบ (Demo)</p>
         <div class="grid grid-cols-2 gap-3">
           <button
@@ -203,7 +203,7 @@
             ⚙️ OP
           </button>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <div class="text-center mt-6">
