--- a/PageEmployees.html
+++ b/PageEmployees.html
@@ -150,7 +150,7 @@
               <div
                 class="w-8 h-8 border-4 border-purple-500 border-t-transparent rounded-full animate-spin"
               ></div>
-              <span>กำลังโหลดข้อมูล...</span>
+              <span>กำลังดึงข้อมูลพนักงาน...</span>
             </div>
           </td>
         </tr>
@@ -677,7 +677,7 @@
       <div class="col-span-full py-12 text-center">
         <div class="flex flex-col items-center justify-center space-y-3">
           <div class="w-10 h-10 border-4 border-purple-100 border-t-purple-600 rounded-full animate-spin"></div>
-          <p class="text-gray-400 text-sm font-medium animate-pulse">กำลังโหลด...</p>
+          <p class="text-gray-400 text-sm font-medium animate-pulse">กำลังดึงข้อมูลพนักงาน...</p>
         </div>
       </div>
     `;
