--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
       rel="stylesheet"
     />
 
+    <!-- PDF.js for Sandboxed Environments -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+    <script>
+      pdfjsLib.GlobalWorkerOptions.workerSrc =
+        "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js";
+    </script>
+
     <!-- Centralized Styles -->
     <?!= include('style'); ?>
   </head>
