--- a/main.html
+++ b/main.html
@@ -95,7 +95,7 @@
           </svg>
           <span class="font-medium">รายงาน</span>
         </a>
-        
+
         <!-- Bookings -->
         <a
           href="#"
@@ -117,7 +117,6 @@
           </svg>
           <span class="font-medium">การจอง</span>
         </a>
-
 
         <!-- Payment Approval (AR/AP, Owner only) -->
         <a
@@ -192,7 +191,7 @@
           <span class="font-medium">สถานที่</span>
         </a>
 
-         <!-- Employees (Owner only) -->
+        <!-- Employees (Owner only) -->
         <a
           href="#"
           data-page="employees"
@@ -291,8 +290,7 @@
       </div>
 
       <!-- Header Actions -->
-      <div class="flex items-center space-x-3">
-        <!-- Search -->
+      <!-- <div class="flex items-center space-x-3">
         <button
           class="p-2 text-gray-500 hover:text-gray-700 hover:bg-gray-100 rounded-lg transition-all duration-200"
         >
@@ -311,7 +309,6 @@
           </svg>
         </button>
 
-        <!-- Notifications -->
         <button
           class="relative p-2 text-gray-500 hover:text-gray-700 hover:bg-gray-100 rounded-lg transition-all duration-200"
         >
@@ -332,7 +329,7 @@
             class="absolute top-1 right-1 w-2 h-2 bg-red-500 rounded-full"
           ></span>
         </button>
-      </div>
+      </div> -->
     </header>
 
     <!-- Page Content -->
