--- a/PageDashboard.html
+++ b/PageDashboard.html
@@ -1,54 +1,78 @@
 <!-- Dashboard Page - Real-time Data -->
 <div class="space-y-6">
   <!-- Date Filter Section -->
-  <div class="bg-white rounded-2xl shadow-lg p-6">
+  <div class="bg-white rounded-2xl shadow-lg p-4 sm:p-6">
+    <!-- Dynamic Header & Filters Row -->
     <div
-      class="flex flex-col md:flex-row md:items-center md:justify-between gap-4"
+      class="flex flex-col lg:flex-row lg:items-center lg:justify-between gap-4"
     >
+      <!-- Left side: Title -->
       <div>
         <h3 class="text-lg font-bold text-gray-800">ภาพรวมยอดขาย</h3>
         <p class="text-sm text-gray-500 mt-1">เลือกช่วงเวลาเพื่อดูข้อมูล</p>
       </div>
 
-      <div class="flex flex-col sm:flex-row gap-3">
-        <!-- Quick Filters -->
-        <div class="flex gap-2">
+      <!-- Right side: All Filter Controls -->
+      <div class="flex flex-col lg:flex-row lg:items-center gap-4">
+        <!-- Part 1: Quick Filter Buttons -->
+        <div
+          class="grid grid-cols-2 sm:grid-cols-4 lg:flex lg:flex-row gap-2 order-2 lg:order-1"
+        >
+          <button
+            onclick="setDateFilter('all')"
+            class="px-3 py-2 bg-gray-50 text-gray-600 rounded-lg hover:bg-gray-100 transition-all font-medium text-sm whitespace-nowrap"
+          >
+            ทั้งหมด
+          </button>
           <button
             onclick="setDateFilter('today')"
-            class="px-4 py-2 bg-purple-50 text-purple-600 rounded-xl hover:bg-purple-100 transition-all font-medium text-sm"
+            class="px-3 py-2 bg-purple-50 text-purple-600 rounded-lg hover:bg-purple-100 transition-all font-medium text-sm whitespace-nowrap"
           >
             วันนี้
           </button>
           <button
             onclick="setDateFilter('month')"
-            class="px-4 py-2 bg-blue-50 text-blue-600 rounded-xl hover:bg-blue-100 transition-all font-medium text-sm"
+            class="px-3 py-2 bg-blue-50 text-blue-600 rounded-lg hover:bg-blue-100 transition-all font-medium text-sm whitespace-nowrap"
           >
             เดือนนี้
           </button>
           <button
             onclick="setDateFilter('year')"
-            class="px-4 py-2 bg-green-50 text-green-600 rounded-xl hover:bg-green-100 transition-all font-medium text-sm"
+            class="px-3 py-2 bg-green-50 text-green-600 rounded-lg hover:bg-green-100 transition-all font-medium text-sm whitespace-nowrap"
           >
             ปีนี้
           </button>
         </div>
 
-        <!-- Custom Date Range -->
-        <div class="flex gap-2 items-center">
+        <!-- Part 2: Separator / Label -->
+        <div class="hidden lg:block w-px h-8 bg-gray-200 order-2"></div>
+        <div class="lg:hidden order-3 border-t border-gray-100 pt-4 mt-2">
+          <label
+            class="text-xs text-gray-500 uppercase tracking-wide mb-2 block"
+            >กำหนดช่วงเวลาเอง</label
+          >
+        </div>
+
+        <!-- Part 3: Date Inputs -->
+        <div
+          class="flex flex-col sm:flex-row items-stretch sm:items-center gap-2 order-3 lg:order-3"
+        >
           <input
             type="date"
             id="startDate"
-            class="px-3 py-2 border-2 border-gray-200 rounded-xl focus:outline-none focus:border-purple-500 text-sm"
+            class="px-3 py-2 border-2 border-gray-200 rounded-lg focus:outline-none focus:border-purple-500 text-sm input-modern lg:w-40"
+            placeholder="จาก"
           />
-          <span class="text-gray-400">-</span>
+          <span class="hidden sm:inline text-gray-400">-</span>
           <input
             type="date"
             id="endDate"
-            class="px-3 py-2 border-2 border-gray-200 rounded-xl focus:outline-none focus:border-purple-500 text-sm"
+            class="px-3 py-2 border-2 border-gray-200 rounded-lg focus:outline-none focus:border-purple-500 text-sm input-modern lg:w-40"
+            placeholder="ถึง"
           />
           <button
             onclick="applyCustomDateFilter()"
-            class="px-4 py-2 bg-gradient-to-r from-purple-600 to-indigo-600 text-white rounded-xl hover:shadow-lg transition-all font-medium text-sm"
+            class="px-4 py-2 bg-gradient-to-r from-purple-600 to-indigo-600 text-white rounded-lg hover:shadow-lg transition-all font-medium text-sm whitespace-nowrap"
           >
             ค้นหา
           </button>
@@ -361,6 +385,12 @@
     let startDate, endDate;
 
     switch (type) {
+      case "all":
+        startDate = "";
+        endDate = "";
+        document.getElementById("currentFilterText").textContent = "ทั้งหมด";
+        break;
+
       case "today":
         startDate = endDate = formatDateForInput(today);
         document.getElementById("currentFilterText").textContent = "วันนี้";
