--- a/PageLocations.html
+++ b/PageLocations.html
@@ -2,64 +2,72 @@
 <div class="space-y-6">
   <!-- Header Actions -->
   <div
-    class="flex flex-col md:flex-row justify-between items-start md:items-center gap-4"
+    class="flex flex-col lg:flex-row justify-between items-stretch lg:items-center gap-4"
   >
-    <div class="flex flex-col sm:flex-row gap-4 w-full md:w-auto items-center">
-      <!-- Refresh Button -->
-      <button
-        onclick="refreshLocationsData()"
-        class="hidden sm:flex p-3 bg-white border-2 border-gray-100 rounded-xl text-gray-500 hover:text-purple-600 hover:border-purple-100 hover:bg-purple-50 transition-all duration-200 shadow-sm"
-        title="รีเฟรชข้อมูล"
+    <!-- Search and Filters -->
+    <div class="w-full lg:w-auto lg:flex-1">
+      <div
+        class="grid grid-cols-1 sm:grid-cols-2 lg:flex lg:flex-row gap-3 lg:items-center"
       >
-        <svg
-          class="w-6 h-6"
-          fill="none"
-          stroke="currentColor"
-          viewBox="0 0 24 24"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
-          ></path>
-        </svg>
-      </button>
+        <!-- Refresh & Search Group -->
+        <div class="flex flex-row gap-2 sm:col-span-2 lg:flex-1">
+          <!-- Refresh Button -->
+          <button
+            onclick="refreshLocationsData()"
+            class="flex-shrink-0 flex items-center justify-center p-3 bg-white border-2 border-gray-100 rounded-xl text-gray-500 hover:text-purple-600 hover:border-purple-100 hover:bg-purple-50 transition-all duration-200 shadow-sm"
+            title="รีเฟรชข้อมูล"
+          >
+            <svg
+              class="w-6 h-6"
+              fill="none"
+              stroke="currentColor"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
+              ></path>
+            </svg>
+          </button>
 
-      <!-- Search -->
-      <div class="relative flex-1 sm:w-64">
-        <input
-          type="text"
-          id="locSearchInput"
-          placeholder="ค้นหาสถานที่..."
-          onkeyup="filterLocations()"
-          class="w-full pl-10 pr-4 py-3 border-2 border-gray-100 rounded-xl focus:outline-none focus:border-purple-500 focus:ring-4 focus:ring-purple-100 transition-all duration-200"
-        />
-        <svg
-          class="w-5 h-5 text-gray-400 absolute left-3 top-3.5"
-          fill="none"
-          stroke="currentColor"
-          viewBox="0 0 24 24"
+          <!-- Search -->
+          <div class="relative flex-1 lg:w-64">
+            <input
+              type="text"
+              id="locSearchInput"
+              placeholder="ค้นหาสถานที่..."
+              onkeyup="filterLocations()"
+              class="w-full input-modern pl-10"
+            />
+            <svg
+              class="w-5 h-5 text-gray-400 absolute left-3 top-3.5"
+              fill="none"
+              stroke="currentColor"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+              ></path>
+            </svg>
+          </div>
+        </div>
+
+        <!-- Filter by Status -->
+        <select
+          id="locFilterStatus"
+          onchange="filterLocations()"
+          class="w-full lg:w-auto input-modern select-modern"
         >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
-          ></path>
-        </svg>
+          <option value="">ทุกสถานะ</option>
+          <option value="เปิดใช้งาน">เปิดใช้งาน</option>
+          <option value="ปิดใช้งาน">ปิดใช้งาน</option>
+        </select>
       </div>
-
-      <!-- Filter by Status -->
-      <select
-        id="locFilterStatus"
-        onchange="filterLocations()"
-        class="w-full sm:w-auto px-4 py-3 border-2 border-gray-100 rounded-xl focus:outline-none focus:border-purple-500 focus:ring-4 focus:ring-purple-100 transition-all duration-200 bg-white select-modern"
-      >
-        <option value="">ทุกสถานะ</option>
-        <option value="เปิดใช้งาน">เปิดใช้งาน</option>
-        <option value="ปิดใช้งาน">ปิดใช้งาน</option>
-      </select>
     </div>
 
     <!-- Add Location Button -->
@@ -150,7 +158,7 @@
       <select
         id="locItemsPerPageSelect"
         onchange="changeLocPageSize()"
-        class="bg-gray-50 border border-gray-200 rounded-lg px-3 py-1.5 focus:outline-none focus:ring-2 focus:ring-purple-500 transition-all cursor-pointer font-bold text-gray-700"
+        class="input-modern select-modern w-full sm:w-auto"
       >
         <option value="10">10</option>
         <option value="20">20</option>
@@ -304,7 +312,7 @@
               id="locationName"
               required
               placeholder="เช่น ภูเก็ต, เขาหลัก"
-              class="w-full px-4 py-3 bg-gray-50 border-2 border-gray-100 rounded-xl focus:outline-none focus:border-purple-500 focus:bg-white transition-all duration-200"
+              class="input-modern"
             />
           </div>
 
@@ -317,7 +325,7 @@
               id="cellName"
               required
               placeholder="เช่น PATTAYA, PHUKET"
-              class="w-full px-4 py-3 bg-gray-50 border-2 border-gray-100 rounded-xl focus:outline-none focus:border-purple-500 focus:bg-white transition-all duration-200"
+              class="input-modern"
             />
           </div>
 
@@ -325,10 +333,7 @@
             <label class="block text-sm font-semibold text-gray-700 mb-2"
               >สถานะการใช้งาน</label
             >
-            <select
-              id="locStatus"
-              class="w-full px-4 py-3 border-2 border-gray-100 rounded-xl focus:outline-none focus:border-purple-500 hover:border-purple-300 focus:ring-4 focus:ring-purple-100 bg-white select-modern"
-            >
+            <select id="locStatus" class="w-full input-modern">
               <option value="เปิดใช้งาน">เปิดใช้งาน</option>
               <option value="ปิดใช้งาน">ปิดใช้งาน</option>
             </select>
@@ -587,7 +592,9 @@
           (loc) => `
         <tr class="group hover:bg-purple-50/50 transition-all duration-200">
         <td class="px-6 py-4">
-           <div class="font-bold text-gray-900">${loc.locationId}</div>
+           <div class="px-6 py-4 text-sm font-semibold text-gray-700">${
+             loc.locationId
+           }</div>
           </td>
           <td class="px-6 py-4 text-sm text-gray-600 font-medium">${
             loc.locationName
@@ -637,50 +644,47 @@
       gbody.innerHTML = paginatedItems
         .map(
           (loc) => `
-        <div class="bg-white p-5 rounded-2xl shadow-sm border border-gray-100 hover:shadow-md hover:border-purple-200 transition-all duration-300 transform hover:-translate-y-1 h-full flex flex-col">
+        <div class="bg-white p-5 rounded-2xl shadow-sm border border-gray-100 hover:shadow-md transition-all duration-200">
           <div class="flex justify-between items-start mb-4">
-            <div class="flex items-center">
-              <div class="w-10 h-10 rounded-xl bg-gradient-to-br from-purple-500 to-indigo-600 flex items-center justify-center text-white text-xs font-bold mr-3 shadow-lg shadow-purple-100">
-                ${loc.locationName.charAt(0)}
-              </div>
-              <div>
-                <h4 class="font-bold text-gray-900 text-sm leading-tight">${
-                  loc.locationName
-                }</h4>
-                <p class="text-[10px] text-gray-500 font-bold uppercase tracking-wider">ID: ${
-                  loc.locationId
-                }</p>
-              </div>
+            <div>
+              <h4 class="font-bold text-gray-900">${loc.locationId}</h4>
             </div>
             <button onclick="toggleLocStatus('${
               loc.locationId
-            }')" class="inline-flex items-center px-2 py-0.5 rounded-full text-[10px] font-bold border-2 transition-all ${
+            }')" class="px-2.5 py-1 text-[10px] font-bold rounded-lg transition-colors ${
             loc.isActive
-              ? "bg-green-50 text-green-700 border-green-100"
-              : "bg-red-50 text-red-700 border-red-100"
+              ? "bg-green-100 text-green-700 active:bg-green-200"
+              : "bg-red-100 text-red-700 active:bg-red-200"
           }">
-              <span class="w-1.5 h-1.5 rounded-full mr-1 transition-colors ${
-                loc.isActive ? "bg-green-500" : "bg-red-500"
-              }"></span>
-              ${loc.isActive ? "เปิด" : "ปิด"}
+              ${loc.isActive ? "เปิดใช้งาน" : "ปิดใช้งาน"}
             </button>
           </div>
           
-          <div class="space-y-2 mb-4 flex-1">
-            <div class="flex items-center text-xs text-gray-600 bg-gray-50 p-3 rounded-xl border border-gray-100">
-              <svg class="w-4 h-4 mr-2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z"></path></svg>
-              <span class="font-bold">CELL: ${loc.cellName}</span>
+          <div class="grid grid-cols-2 gap-3 mb-5 p-3 bg-gray-50 rounded-xl">
+            <div class="text-center">
+              <p class="text-[10px] text-gray-400 uppercase font-bold">ชื่อสถานที่</p>
+              <p class="text-xs font-bold text-gray-900 truncate px-1">${
+                loc.locationName
+              }</p>
+            </div>
+            <div class="text-center border-l border-gray-200">
+              <p class="text-[10px] text-gray-400 uppercase font-bold">ชื่อเซลล์</p>
+              <p class="text-xs font-bold text-purple-600 truncate px-1">${
+                loc.cellName
+              }</p>
             </div>
           </div>
 
-          <div class="flex space-x-2 pt-2">
+          <div class="flex space-x-2">
             <button onclick="editLocation('${
               loc.locationId
-            }')" class="flex-1 py-2.5 bg-gray-50 text-indigo-700 rounded-xl text-xs font-bold border border-gray-100 hover:bg-indigo-50 hover:border-indigo-100 transition-all">แก้ไข</button>
+            }')" class="flex-1 py-2 bg-indigo-50 text-indigo-700 rounded-xl text-sm font-bold hover:bg-indigo-100 transition-colors">
+              แก้ไข
+            </button>
             <button onclick="deleteLocationModal('${loc.locationId}', '${
             loc.locationName
-          }')" class="px-4 py-2.5 bg-red-50 text-red-600 rounded-xl transition-all border border-transparent hover:border-red-100">
-              <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path></svg>
+          }')" class="px-4 py-2 bg-red-50 text-red-600 rounded-xl text-sm font-bold hover:bg-red-100 transition-colors">
+              <svg class="w-4 h-4 mx-auto" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path></svg>
             </button>
           </div>
         </div>
