--- a/PagePaymentApproval.html
+++ b/PagePaymentApproval.html
@@ -1,66 +1,165 @@
 <!-- Payment Approval Page - Modern UI -->
 <div class="space-y-6">
-  <!-- Header Actions -->
-  <div
-    class="flex flex-col md:flex-row justify-between items-start md:items-center gap-4"
-  >
-    <div class="flex flex-col sm:flex-row gap-4 w-full md:w-auto items-center">
-      <!-- Refresh Button -->
-      <button
-        onclick="refreshPaymentData()"
-        class="hidden sm:flex p-3 bg-white border-2 border-gray-100 rounded-xl text-gray-500 hover:text-purple-600 hover:border-purple-100 hover:bg-purple-50 transition-all duration-200 shadow-sm"
-        title="รีเฟรชข้อมูล"
-      >
-        <svg
-          class="w-6 h-6"
-          fill="none"
-          stroke="currentColor"
-          viewBox="0 0 24 24"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
-          ></path>
-        </svg>
-      </button>
-
-      <!-- Search -->
-      <div class="relative flex-1 sm:w-64">
-        <input
-          type="text"
-          id="searchPayment"
-          placeholder="ค้นหารหัสการจอง, สถานที่..."
-          onkeyup="filterPayments()"
-          class="w-full pl-10 pr-4 py-3 border-2 border-gray-100 rounded-xl focus:outline-none focus:border-purple-500 focus:ring-4 focus:ring-purple-100 transition-all duration-200"
-        />
-        <svg
-          class="w-5 h-5 text-gray-400 absolute left-3 top-3.5"
-          fill="none"
-          stroke="currentColor"
-          viewBox="0 0 24 24"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
-          ></path>
-        </svg>
+  <!-- Date Filter Section -->
+  <div class="bg-white rounded-2xl shadow-lg p-6">
+    <!-- Dynamic Header & Filters Row -->
+    <div
+      class="flex flex-col lg:flex-row lg:items-center lg:justify-between gap-4"
+    >
+      <!-- Left side: Title -->
+      <div>
+        <h3 class="text-lg font-bold text-gray-800">กรองข้อมูลการอนุมัติ</h3>
+        <p class="text-sm text-gray-500 mt-1">เลือกช่วงเวลาเพื่อดูข้อมูล</p>
       </div>
 
-      <!-- Filter by Status -->
-      <select
-        id="filterPaymentStatus"
-        onchange="filterPayments()"
-        class="w-full sm:w-auto px-4 py-3 border-2 border-gray-100 rounded-xl focus:outline-none focus:border-purple-500 focus:ring-4 focus:ring-purple-100 transition-all duration-200 bg-white select-modern"
+      <!-- Right side: All Filter Controls -->
+      <div class="flex flex-col lg:flex-row lg:items-center gap-4">
+        <!-- Part 1: Quick Filter Buttons -->
+        <div
+          class="grid grid-cols-2 sm:grid-cols-4 lg:flex lg:flex-row gap-2 order-2 lg:order-1"
+        >
+          <button
+            onclick="setPaymentDateFilter('all')"
+            class="px-3 py-2 bg-gray-50 text-gray-600 rounded-lg hover:bg-gray-100 transition-all font-medium text-sm whitespace-nowrap"
+          >
+            ทั้งหมด
+          </button>
+          <button
+            onclick="setPaymentDateFilter('today')"
+            class="px-3 py-2 bg-purple-50 text-purple-600 rounded-lg hover:bg-purple-100 transition-all font-medium text-sm whitespace-nowrap"
+          >
+            วันนี้
+          </button>
+          <button
+            onclick="setPaymentDateFilter('month')"
+            class="px-3 py-2 bg-blue-50 text-blue-600 rounded-lg hover:bg-blue-100 transition-all font-medium text-sm whitespace-nowrap"
+          >
+            เดือนนี้
+          </button>
+          <button
+            onclick="setPaymentDateFilter('year')"
+            class="px-3 py-2 bg-green-50 text-green-600 rounded-lg hover:bg-green-100 transition-all font-medium text-sm whitespace-nowrap"
+          >
+            ปีนี้
+          </button>
+        </div>
+
+        <!-- Part 2: Separator / Label -->
+        <div class="hidden lg:block w-px h-8 bg-gray-200 order-2"></div>
+        <div class="lg:hidden order-3 border-t border-gray-100 pt-4 mt-2">
+          <label
+            class="text-xs text-gray-500 uppercase tracking-wide mb-2 block"
+            >กำหนดช่วงเวลาเอง</label
+          >
+        </div>
+
+        <!-- Part 3: Date Inputs -->
+        <div
+          class="flex flex-col sm:flex-row items-stretch sm:items-center gap-2 order-3 lg:order-3"
+        >
+          <input
+            type="date"
+            id="paymentFilterDateFrom"
+            class="px-3 py-2 border-2 border-gray-200 rounded-lg focus:outline-none focus:border-purple-500 text-sm input-modern lg:w-40"
+            placeholder="จาก"
+          />
+          <span class="hidden sm:inline text-gray-400">-</span>
+          <input
+            type="date"
+            id="paymentFilterDateTo"
+            class="px-3 py-2 border-2 border-gray-200 rounded-lg focus:outline-none focus:border-purple-500 text-sm input-modern lg:w-40"
+            placeholder="ถึง"
+          />
+          <button
+            onclick="applyCustomPaymentDateFilter()"
+            class="px-4 py-2 bg-gradient-to-r from-purple-600 to-indigo-600 text-white rounded-lg hover:shadow-lg transition-all font-medium text-sm whitespace-nowrap"
+          >
+            ค้นหา
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Current Filter Display -->
+    <div class="mt-4 pt-4 border-t border-gray-100">
+      <p class="text-sm text-gray-600">
+        <span class="font-semibold">ช่วงเวลาที่เลือก:</span>
+        <span id="currentPaymentFilterText" class="text-purple-600 ml-2"
+          >ทั้งหมด</span
+        >
+      </p>
+    </div>
+  </div>
+
+  <!-- Header Actions -->
+  <div
+    class="flex flex-col lg:flex-row justify-between items-stretch lg:items-center gap-4"
+  >
+    <!-- Search and Filters Group -->
+    <div class="w-full lg:w-auto lg:flex-1">
+      <div
+        class="grid grid-cols-1 sm:grid-cols-2 lg:flex lg:flex-row gap-3 lg:items-center"
       >
-        <option value="">ทุกสถานะ</option>
-        <option value="Confirm">Confirm</option>
-        <option value="Completed">Completed</option>
-        <option value="Cancel">Cancel</option>
-      </select>
+        <!-- Refresh & Search Group -->
+        <div class="flex flex-row gap-2 sm:col-span-2 lg:flex-1">
+          <!-- Refresh Button -->
+          <button
+            onclick="refreshPaymentData()"
+            class="flex-shrink-0 flex items-center justify-center p-3 bg-white border-2 border-gray-100 rounded-xl text-gray-500 hover:text-purple-600 hover:border-purple-100 hover:bg-purple-50 transition-all duration-200 shadow-sm"
+            title="รีเฟรชข้อมูล"
+          >
+            <svg
+              class="w-6 h-6"
+              fill="none"
+              stroke="currentColor"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
+              ></path>
+            </svg>
+          </button>
+
+          <!-- Search -->
+          <div class="relative flex-1 lg:w-64">
+            <input
+              type="text"
+              id="searchPayment"
+              placeholder="ค้นหาการจอง..."
+              onkeyup="filterPayments()"
+              class="w-full input-modern pl-10"
+            />
+            <svg
+              class="w-5 h-5 text-gray-400 absolute left-3 top-3.5"
+              fill="none"
+              stroke="currentColor"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+              ></path>
+            </svg>
+          </div>
+        </div>
+
+        <!-- Filter by Status -->
+        <select
+          id="filterPaymentStatus"
+          onchange="filterPayments()"
+          class="w-full sm:w-auto input-modern select-modern"
+        >
+          <option value="">ทุกสถานะ</option>
+          <option value="Confirm">Confirm</option>
+          <option value="Completed">Completed</option>
+          <option value="Cancel">Cancel</option>
+        </select>
+      </div>
     </div>
   </div>
 
@@ -157,7 +256,7 @@
       <select
         id="paymentItemsPerPageSelect"
         onchange="changePaymentPageSize()"
-        class="bg-gray-50 border border-gray-200 rounded-lg px-3 py-1.5 focus:outline-none focus:ring-2 focus:ring-purple-500 transition-all cursor-pointer font-bold text-gray-700"
+        class="input-modern select-modern w-full sm:w-auto"
       >
         <option value="10">10</option>
         <option value="20">20</option>
@@ -388,7 +487,7 @@
           <select
             id="newStatusSelect"
             onchange="toggleReasonField()"
-            class="w-full px-4 py-3 border-2 border-gray-100 rounded-xl focus:outline-none focus:border-purple-500 hover:border-purple-300 focus:ring-4 focus:ring-purple-100 transition-all duration-200 bg-white select-modern"
+            class="input-modern select-modern w-full sm:w-auto"
           >
             <option value="">-- เลือกสถานะ --</option>
             <option value="Confirm">Confirm</option>
@@ -404,7 +503,7 @@
           <textarea
             id="statusReasonText"
             rows="3"
-            class="w-full px-4 py-3 border-2 border-gray-100 rounded-xl focus:outline-none focus:border-purple-500 hover:border-purple-300 focus:ring-4 focus:ring-purple-100 transition-all duration-200"
+            class="input-modern"
             placeholder="ระบุเหตุผล..."
           ></textarea>
         </div>
@@ -443,6 +542,102 @@
   let allPayments = [];
   let currentPayment = null;
 
+  /**
+   * Format Date for Input (YYYY-MM-DD)
+   */
+  function formatDateForInput(date) {
+    const year = date.getFullYear();
+    const month = String(date.getMonth() + 1).padStart(2, "0");
+    const day = String(date.getDate()).padStart(2, "0");
+    return `${year}-${month}-${day}`;
+  }
+
+  /**
+   * Format Date to Thai (DD/MM/YYYY)
+   */
+  function formatDateThai(date) {
+    const day = String(date.getDate()).padStart(2, "0");
+    const month = String(date.getMonth() + 1).padStart(2, "0");
+    const year = date.getFullYear();
+    return `${day}/${month}/${year}`;
+  }
+
+  /**
+   * Set Payment Date Filter (Quick Filters)
+   */
+  function setPaymentDateFilter(type) {
+    const today = new Date();
+    let startDate, endDate;
+
+    switch (type) {
+      case "all":
+        startDate = "";
+        endDate = "";
+        document.getElementById("currentPaymentFilterText").textContent =
+          "ทั้งหมด";
+        break;
+
+      case "today":
+        startDate = endDate = formatDateForInput(today);
+        document.getElementById("currentPaymentFilterText").textContent =
+          "วันนี้";
+        break;
+
+      case "month":
+        const firstDay = new Date(today.getFullYear(), today.getMonth(), 1);
+        const lastDay = new Date(today.getFullYear(), today.getMonth() + 1, 0);
+        startDate = formatDateForInput(firstDay);
+        endDate = formatDateForInput(lastDay);
+        document.getElementById("currentPaymentFilterText").textContent =
+          "เดือนนี้";
+        break;
+
+      case "year":
+        const yearStart = new Date(today.getFullYear(), 0, 1);
+        const yearEnd = new Date(today.getFullYear(), 11, 31);
+        startDate = formatDateForInput(yearStart);
+        endDate = formatDateForInput(yearEnd);
+        document.getElementById("currentPaymentFilterText").textContent =
+          "ปีนี้";
+        break;
+    }
+
+    // Update input fields
+    document.getElementById("paymentFilterDateFrom").value = startDate;
+    document.getElementById("paymentFilterDateTo").value = endDate;
+
+    // Trigger filter
+    filterPayments();
+  }
+
+  /**
+   * Apply Custom Payment Date Filter
+   */
+  function applyCustomPaymentDateFilter() {
+    const startDate = document.getElementById("paymentFilterDateFrom").value;
+    const endDate = document.getElementById("paymentFilterDateTo").value;
+
+    if (!startDate || !endDate) {
+      showToast("กรุณาเลือกวันที่เริ่มต้นและสิ้นสุด", "warning");
+      return;
+    }
+
+    if (new Date(startDate) > new Date(endDate)) {
+      showToast("วันที่เริ่มต้นต้องน้อยกว่าหรือเท่ากับวันที่สิ้นสุด", "error");
+      return;
+    }
+
+    // Update filter display
+    const start = new Date(startDate);
+    const end = new Date(endDate);
+    document.getElementById(
+      "currentPaymentFilterText"
+    ).textContent = `${formatDateThai(start)} - ${formatDateThai(end)}`;
+
+    // Trigger filter
+    filterPayments();
+  }
+
   // Initialize
   function loadPaymentApproval() {
     loadPayments();
@@ -456,6 +651,20 @@
       return;
     }
 
+    // Initialize date inputs if not already set
+    const startDateEl = document.getElementById("paymentFilterDateFrom");
+    const endDateEl = document.getElementById("paymentFilterDateTo");
+
+    if (startDateEl && endDateEl && !startDateEl.value && !endDateEl.value) {
+      const today = new Date();
+      const firstDay = new Date(today.getFullYear(), today.getMonth(), 1);
+      const lastDay = new Date(today.getFullYear(), today.getMonth() + 1, 0);
+      startDateEl.value = formatDateForInput(firstDay);
+      endDateEl.value = formatDateForInput(lastDay);
+      document.getElementById("currentPaymentFilterText").textContent =
+        "เดือนนี้";
+    }
+
     showPaymentLoading();
 
     const filterStatus = document.getElementById("filterPaymentStatus")?.value;
@@ -467,6 +676,11 @@
   }
 
   function refreshPaymentData() {
+    document.getElementById("searchPayment").value = "";
+    document.getElementById("filterPaymentStatus").value = "";
+    document.getElementById("paymentFilterDateFrom").value = "";
+    document.getElementById("paymentFilterDateTo").value = "";
+    document.getElementById("currentPaymentFilterText").textContent = "ทั้งหมด";
     loadPayments();
   }
 
@@ -488,7 +702,10 @@
       return;
     }
 
-    allPayments = response.data;
+    // Sort by bookingId in descending order (newest first)
+    allPayments = (response.data || []).sort((a, b) => {
+      return b.bookingId.localeCompare(a.bookingId);
+    });
     currentFilteredPayments = allPayments;
     currentPaymentPage = 1;
     renderPaymentPagination();
@@ -680,6 +897,8 @@
       .getElementById("searchPayment")
       ?.value.toLowerCase();
     const statusFilter = document.getElementById("filterPaymentStatus")?.value;
+    const dateFrom = document.getElementById("paymentFilterDateFrom")?.value;
+    const dateTo = document.getElementById("paymentFilterDateTo")?.value;
 
     let filtered = allPayments;
 
@@ -696,6 +915,37 @@
           (p.agent && p.agent.toLowerCase().includes(searchTerm))
       );
     }
+
+    // Date filter - Filter by bookingDate
+    if (dateFrom || dateTo) {
+      filtered = filtered.filter((p) => {
+        const bookingDate = p.bookingDate;
+        // Check if bookingDate is in DD/MM/YYYY format
+        if (bookingDate && bookingDate.includes("/")) {
+          const parts = bookingDate.split("/");
+          if (parts.length === 3) {
+            // Convert DD/MM/YYYY to YYYY-MM-DD
+            const comparableDate = `${parts[2]}-${parts[1]}-${parts[0]}`;
+            return (
+              (!dateFrom || comparableDate >= dateFrom) &&
+              (!dateTo || comparableDate <= dateTo)
+            );
+          }
+        } else {
+          // If already in YYYY-MM-DD format
+          return (
+            (!dateFrom || bookingDate >= dateFrom) &&
+            (!dateTo || bookingDate <= dateTo)
+          );
+        }
+        return true;
+      });
+    }
+
+    // Sort by bookingId in ascending order
+    filtered = filtered.sort((a, b) => {
+      return b.bookingId.localeCompare(a.bookingId);
+    });
 
     currentFilteredPayments = filtered;
     currentPaymentPage = 1;
