--- a/PageReports.html
+++ b/PageReports.html
@@ -1,55 +1,78 @@
 <!-- Reports Page -->
 <div class="space-y-6">
-  <!-- Page Header -->
-  <div class="bg-white rounded-2xl shadow-lg p-6">
+  <!-- Page Header & Filter -->
+  <div class="bg-white rounded-2xl shadow-lg p-4 sm:p-6">
+    <!-- Dynamic Header & Filters Row -->
     <div
-      class="flex flex-col md:flex-row md:items-center md:justify-between gap-4"
+      class="flex flex-col lg:flex-row lg:items-center lg:justify-between gap-4"
     >
+      <!-- Left side: Title -->
       <div>
         <h3 class="text-lg font-bold text-gray-800">รายงานและสถิติ</h3>
         <p class="text-sm text-gray-500 mt-1">วิเคราะห์ยอดขายและสรุปข้อมูล</p>
       </div>
 
-      <!-- Date Filter -->
-      <div class="flex flex-col sm:flex-row gap-3">
-        <!-- Quick Filters -->
-        <div class="flex gap-2">
+      <!-- Right side: All Filter Controls -->
+      <div class="flex flex-col lg:flex-row lg:items-center gap-4">
+        <!-- Part 1: Quick Filter Buttons -->
+        <div
+          class="grid grid-cols-2 sm:grid-cols-4 lg:flex lg:flex-row gap-2 order-2 lg:order-1"
+        >
+          <button
+            onclick="setReportFilter('all')"
+            class="px-3 py-2 bg-gray-50 text-gray-600 rounded-lg hover:bg-gray-100 transition-all font-medium text-sm whitespace-nowrap"
+          >
+            ทั้งหมด
+          </button>
           <button
             onclick="setReportFilter('today')"
-            class="px-4 py-2 bg-purple-50 text-purple-600 rounded-xl hover:bg-purple-100 transition-all font-medium text-sm"
+            class="px-3 py-2 bg-purple-50 text-purple-600 rounded-lg hover:bg-purple-100 transition-all font-medium text-sm whitespace-nowrap"
           >
             วันนี้
           </button>
           <button
             onclick="setReportFilter('month')"
-            class="px-4 py-2 bg-blue-50 text-blue-600 rounded-xl hover:bg-blue-100 transition-all font-medium text-sm"
+            class="px-3 py-2 bg-blue-50 text-blue-600 rounded-lg hover:bg-blue-100 transition-all font-medium text-sm whitespace-nowrap"
           >
             เดือนนี้
           </button>
           <button
             onclick="setReportFilter('year')"
-            class="px-4 py-2 bg-green-50 text-green-600 rounded-xl hover:bg-green-100 transition-all font-medium text-sm"
+            class="px-3 py-2 bg-green-50 text-green-600 rounded-lg hover:bg-green-100 transition-all font-medium text-sm whitespace-nowrap"
           >
             ปีนี้
           </button>
         </div>
 
-        <!-- Custom Date Range -->
-        <div class="flex gap-2 items-center">
+        <!-- Part 2: Separator / Label -->
+        <div class="hidden lg:block w-px h-8 bg-gray-200 order-2"></div>
+        <div class="lg:hidden order-3 border-t border-gray-100 pt-4 mt-2">
+          <label
+            class="text-xs text-gray-500 uppercase tracking-wide mb-2 block"
+            >กำหนดช่วงเวลาเอง</label
+          >
+        </div>
+
+        <!-- Part 3: Date Inputs -->
+        <div
+          class="flex flex-col sm:flex-row items-stretch sm:items-center gap-2 order-3 lg:order-3"
+        >
           <input
             type="date"
             id="reportStartDate"
-            class="px-3 py-2 border-2 border-gray-200 rounded-xl focus:outline-none focus:border-purple-500 text-sm"
+            class="px-3 py-2 border-2 border-gray-200 rounded-lg focus:outline-none focus:border-purple-500 text-sm input-modern lg:w-40"
+            placeholder="จาก"
           />
-          <span class="text-gray-400">-</span>
+          <span class="hidden sm:inline text-gray-400">-</span>
           <input
             type="date"
             id="reportEndDate"
-            class="px-3 py-2 border-2 border-gray-200 rounded-xl focus:outline-none focus:border-purple-500 text-sm"
+            class="px-3 py-2 border-2 border-gray-200 rounded-lg focus:outline-none focus:border-purple-500 text-sm input-modern lg:w-40"
+            placeholder="ถึง"
           />
           <button
             onclick="applyCustomReportFilter()"
-            class="px-4 py-2 bg-gradient-to-r from-purple-600 to-indigo-600 text-white rounded-xl hover:shadow-lg transition-all font-medium text-sm"
+            class="px-4 py-2 bg-gradient-to-r from-purple-600 to-indigo-600 text-white rounded-lg hover:shadow-lg transition-all font-medium text-sm whitespace-nowrap"
           >
             ค้นหา
           </button>
@@ -103,11 +126,57 @@
       </div>
 
       <!-- Loading State -->
-      <div id="dailySalesLoading" class="text-center py-12">
-        <div
-          class="w-10 h-10 border-4 border-blue-100 border-t-blue-600 rounded-full animate-spin mx-auto"
-        ></div>
-        <p class="text-gray-400 text-sm mt-3">กำลังโหลด...</p>
+      <div id="dailySalesLoading" class="space-y-4">
+        <!-- Summary Skeleton -->
+        <div class="bg-gray-50 rounded-xl p-4 animate-pulse">
+          <div class="h-4 bg-gray-200 rounded w-32 mb-2"></div>
+          <div class="h-8 bg-gray-300 rounded w-40"></div>
+        </div>
+
+        <!-- Item Skeletons -->
+        <div class="space-y-3">
+          <div class="bg-gray-50 rounded-xl p-4 animate-pulse">
+            <div class="flex items-center justify-between mb-3">
+              <div class="flex-1">
+                <div class="h-5 bg-gray-300 rounded w-32 mb-2"></div>
+                <div class="h-3 bg-gray-200 rounded w-24"></div>
+              </div>
+              <div class="text-right">
+                <div class="h-5 bg-gray-300 rounded w-24 mb-1"></div>
+                <div class="h-3 bg-gray-200 rounded w-12"></div>
+              </div>
+            </div>
+            <div class="h-2 bg-gray-200 rounded-full w-full"></div>
+          </div>
+
+          <div class="bg-gray-50 rounded-xl p-4 animate-pulse">
+            <div class="flex items-center justify-between mb-3">
+              <div class="flex-1">
+                <div class="h-5 bg-gray-300 rounded w-28 mb-2"></div>
+                <div class="h-3 bg-gray-200 rounded w-20"></div>
+              </div>
+              <div class="text-right">
+                <div class="h-5 bg-gray-300 rounded w-24 mb-1"></div>
+                <div class="h-3 bg-gray-200 rounded w-12"></div>
+              </div>
+            </div>
+            <div class="h-2 bg-gray-200 rounded-full w-full"></div>
+          </div>
+
+          <div class="bg-gray-50 rounded-xl p-4 animate-pulse">
+            <div class="flex items-center justify-between mb-3">
+              <div class="flex-1">
+                <div class="h-5 bg-gray-300 rounded w-36 mb-2"></div>
+                <div class="h-3 bg-gray-200 rounded w-28"></div>
+              </div>
+              <div class="text-right">
+                <div class="h-5 bg-gray-300 rounded w-24 mb-1"></div>
+                <div class="h-3 bg-gray-200 rounded w-12"></div>
+              </div>
+            </div>
+            <div class="h-2 bg-gray-200 rounded-full w-full"></div>
+          </div>
+        </div>
       </div>
 
       <!-- Data Container -->
@@ -141,11 +210,57 @@
       </div>
 
       <!-- Loading State -->
-      <div id="programSummaryLoading" class="text-center py-12">
-        <div
-          class="w-10 h-10 border-4 border-purple-100 border-t-purple-600 rounded-full animate-spin mx-auto"
-        ></div>
-        <p class="text-gray-400 text-sm mt-3">กำลังโหลด...</p>
+      <div id="programSummaryLoading" class="space-y-4">
+        <!-- Summary Skeleton -->
+        <div class="bg-gray-50 rounded-xl p-4 animate-pulse">
+          <div class="h-4 bg-gray-200 rounded w-24 mb-2"></div>
+          <div class="h-8 bg-gray-300 rounded w-40"></div>
+        </div>
+
+        <!-- Item Skeletons -->
+        <div class="space-y-3">
+          <div class="bg-gray-50 rounded-xl p-4 animate-pulse">
+            <div class="flex items-center justify-between mb-3">
+              <div class="flex-1">
+                <div class="h-5 bg-gray-300 rounded w-40 mb-2"></div>
+                <div class="h-3 bg-gray-200 rounded w-48"></div>
+              </div>
+              <div class="text-right">
+                <div class="h-5 bg-gray-300 rounded w-24 mb-1"></div>
+                <div class="h-3 bg-gray-200 rounded w-12"></div>
+              </div>
+            </div>
+            <div class="h-2 bg-gray-200 rounded-full w-full"></div>
+          </div>
+
+          <div class="bg-gray-50 rounded-xl p-4 animate-pulse">
+            <div class="flex items-center justify-between mb-3">
+              <div class="flex-1">
+                <div class="h-5 bg-gray-300 rounded w-36 mb-2"></div>
+                <div class="h-3 bg-gray-200 rounded w-44"></div>
+              </div>
+              <div class="text-right">
+                <div class="h-5 bg-gray-300 rounded w-24 mb-1"></div>
+                <div class="h-3 bg-gray-200 rounded w-12"></div>
+              </div>
+            </div>
+            <div class="h-2 bg-gray-200 rounded-full w-full"></div>
+          </div>
+
+          <div class="bg-gray-50 rounded-xl p-4 animate-pulse">
+            <div class="flex items-center justify-between mb-3">
+              <div class="flex-1">
+                <div class="h-5 bg-gray-300 rounded w-44 mb-2"></div>
+                <div class="h-3 bg-gray-200 rounded w-52"></div>
+              </div>
+              <div class="text-right">
+                <div class="h-5 bg-gray-300 rounded w-24 mb-1"></div>
+                <div class="h-3 bg-gray-200 rounded w-12"></div>
+              </div>
+            </div>
+            <div class="h-2 bg-gray-200 rounded-full w-full"></div>
+          </div>
+        </div>
       </div>
 
       <!-- Data Container -->
@@ -193,6 +308,12 @@
     let startDate, endDate;
 
     switch (type) {
+      case "all":
+        startDate = "";
+        endDate = "";
+        document.getElementById("reportFilterText").textContent = "ทั้งหมด";
+        break;
+
       case "today":
         startDate = endDate = formatDateForInput(today);
         document.getElementById("reportFilterText").textContent = "วันนี้";
@@ -258,30 +379,6 @@
   }
 
   /**
-   * Initialize Date Inputs
-   */
-  function initializeReportDates() {
-    const today = new Date();
-    const firstDay = new Date(today.getFullYear(), today.getMonth(), 1);
-    const lastDay = new Date(today.getFullYear(), today.getMonth() + 1, 0);
-
-    const startDateEl = document.getElementById("reportStartDate");
-    const endDateEl = document.getElementById("reportEndDate");
-
-    if (startDateEl && endDateEl) {
-      startDateEl.value = formatDateForInput(firstDay);
-      endDateEl.value = formatDateForInput(lastDay);
-      console.log(
-        "Report date inputs initialized:",
-        startDateEl.value,
-        endDateEl.value
-      );
-    } else {
-      console.error("Report date input elements not found!");
-    }
-  }
-
-  /**
    * Load Reports Data
    */
   function loadReports(startDate, endDate) {
@@ -290,6 +387,18 @@
     if (!session || !session.sessionToken) {
       showToast("กรุณาเข้าสู่ระบบใหม่", "error");
       return;
+    }
+
+    // Initialize date inputs if not already set
+    const startDateEl = document.getElementById("reportStartDate");
+    const endDateEl = document.getElementById("reportEndDate");
+
+    if (startDateEl && endDateEl && !startDateEl.value && !endDateEl.value) {
+      const today = new Date();
+      const firstDay = new Date(today.getFullYear(), today.getMonth(), 1);
+      const lastDay = new Date(today.getFullYear(), today.getMonth() + 1, 0);
+      startDateEl.value = formatDateForInput(firstDay);
+      endDateEl.value = formatDateForInput(lastDay);
     }
 
     // Default to this month if no dates provided
@@ -304,40 +413,47 @@
     // Show loading
     showReportLoading();
 
-    // Load both reports
-    google.script.run
-      .withSuccessHandler((response) => {
-        if (response.success) {
-          dailySalesData = response.data.dailySales || [];
+    // Load both reports in parallel and wait for both to complete
+    Promise.all([
+      new Promise((resolve, reject) => {
+        google.script.run
+          .withSuccessHandler(resolve)
+          .withFailureHandler(reject)
+          .getDailySalesReport(session.sessionToken, startDate, endDate);
+      }),
+      new Promise((resolve, reject) => {
+        google.script.run
+          .withSuccessHandler(resolve)
+          .withFailureHandler(reject)
+          .getProgramSummaryReport(session.sessionToken, startDate, endDate);
+      }),
+    ])
+      .then(([dailySalesResponse, programSummaryResponse]) => {
+        // Both reports loaded successfully, now render them together
+        if (dailySalesResponse.success) {
+          dailySalesData = dailySalesResponse.data.dailySales || [];
           renderDailySales(dailySalesData);
         } else {
           showToast(
-            response.message || "ไม่สามารถโหลดข้อมูลยอดขายได้",
+            dailySalesResponse.message || "ไม่สามารถโหลดข้อมูลยอดขายได้",
             "error"
           );
         }
-      })
-      .withFailureHandler((error) => {
-        showToast("เกิดข้อผิดพลาด: " + error.message, "error");
-      })
-      .getDailySalesReport(session.sessionToken, startDate, endDate);
 
-    google.script.run
-      .withSuccessHandler((response) => {
-        if (response.success) {
-          programSummaryData = response.data.programSummary || [];
+        if (programSummaryResponse.success) {
+          programSummaryData = programSummaryResponse.data.programSummary || [];
           renderProgramSummary(programSummaryData);
         } else {
           showToast(
-            response.message || "ไม่สามารถโหลดข้อมูลโปรแกรมได้",
+            programSummaryResponse.message || "ไม่สามารถโหลดข้อมูลโปรแกรมได้",
             "error"
           );
         }
       })
-      .withFailureHandler((error) => {
+      .catch((error) => {
         showToast("เกิดข้อผิดพลาด: " + error.message, "error");
-      })
-      .getProgramSummaryReport(session.sessionToken, startDate, endDate);
+        hideReportLoading();
+      });
   }
 
   /**
@@ -516,16 +632,8 @@
     `;
   }
 
-  /**
-   * Main Load Function
-   */
-  function loadReportsPage() {
-    initializeReportDates();
-    setReportFilter("month");
-  }
-
   // Export to window
   if (typeof window.loadReports === "undefined") {
-    window.loadReports = loadReportsPage;
+    window.loadReports = loadReports;
   }
 </script>
