--- a/PageBooking.html
+++ b/PageBooking.html
@@ -493,6 +493,7 @@
               value="0"
               required
               class="input-modern"
+              onfocus="this.select()"
               onchange="calculateTotal()"
             />
           </div>
@@ -508,6 +509,7 @@
               min="0"
               value="0"
               class="input-modern"
+              onfocus="this.select()"
               onchange="calculateTotal()"
             />
           </div>
@@ -556,6 +558,7 @@
               min="0"
               value="0"
               class="input-modern"
+              onfocus="this.select()"
               onchange="calculateTotal()"
             />
           </div>
@@ -571,6 +574,7 @@
               min="0"
               value="0"
               class="input-modern"
+              onfocus="this.select()"
               onchange="calculateTotal()"
             />
           </div>
