--- a/PagePaymentApproval.html
+++ b/PagePaymentApproval.html
@@ -1013,9 +1013,15 @@
                 payment.children * payment.childPrice
               ).toLocaleString()} ฿</span>
             </div>
+            <div class="flex justify-between text-sm text-orange-600">
+              <span>ค่าใช้จ่ายเพิ่มเติม</span>
+              <span class="font-bold">${Number(
+                payment.additionalCost
+              ).toLocaleString()} ฿</span>
+            </div>
             <div class="flex justify-between text-sm text-red-600">
               <span>ส่วนลด</span>
-              <span class="font-bold">-${Number(
+              <span class="font-bold">${Number(
                 payment.discount
               ).toLocaleString()} ฿</span>
             </div>
@@ -1025,6 +1031,108 @@
                 payment.totalAmount
               ).toLocaleString()} ฿</span>
             </div>
+          </div>
+        </div>
+
+        <!-- Payment Input Section -->
+        <div class="bg-gradient-to-br from-green-50 to-emerald-50 border-2 border-green-200 rounded-xl p-4">
+          <h3 class="font-bold text-gray-900 mb-3 flex items-center">
+            <svg class="w-5 h-5 mr-2 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 9V7a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2m2 4h10a2 2 0 002-2v-6a2 2 0 00-2-2H9a2 2 0 00-2 2v6a2 2 0 002 2zm7-5a2 2 0 11-4 0 2 2 0 014 0z"></path>
+            </svg>
+            การชำระเงิน
+          </h3>
+          <div class="space-y-3">
+            <!-- เงินโอน -->
+            <div>
+              <label class="block text-xs font-semibold text-gray-700 mb-1">เงินโอน (฿)</label>
+              <input 
+                type="number" 
+                id="transferAmount" 
+                value="${payment.transferAmount || 0}"
+                min="0"
+                onfocus="this.select()"
+                onchange="calculateTotalPaid()"
+                class="w-full px-3 py-2 border-2 border-gray-200 rounded-lg focus:outline-none focus:border-green-500 text-sm"
+                placeholder="0.00"
+              />
+            </div>
+
+            <!-- เงินสด -->
+            <div>
+              <label class="block text-xs font-semibold text-gray-700 mb-1">เงินสด (฿)</label>
+              <input 
+                type="number" 
+                id="cashAmount" 
+                value="${payment.cashAmount || 0}"
+                min="0"
+                onfocus="this.select()"
+                onchange="calculateTotalPaid()"
+                class="w-full px-3 py-2 border-2 border-gray-200 rounded-lg focus:outline-none focus:border-green-500 text-sm"
+                placeholder="0.00"
+              />
+            </div>
+
+            <!-- Cash on tour -->
+            <div>
+              <label class="block text-xs font-semibold text-gray-700 mb-1">Cash on tour (฿)</label>
+              <input 
+                type="number" 
+                id="cashOnTour" 
+                value="${payment.cashOnTour || 0}"
+                min="0"
+                onfocus="this.select()"
+                onchange="calculateTotalPaid()"
+                class="w-full px-3 py-2 border-2 border-gray-200 rounded-lg focus:outline-none focus:border-green-500 text-sm"
+                placeholder="0.00"
+              />
+            </div>
+
+            <!-- ยอดรวมที่จ่ายเข้ามา -->
+            <div class="border-t-2 border-green-300 pt-3 mt-3">
+              <div class="flex justify-between items-center">
+                <span class="font-bold text-gray-900">ยอดรวมที่จ่ายเข้ามา</span>
+                <span id="totalPaidAmount" class="text-xl font-bold text-green-600">
+                  ${Number(
+                    (payment.transferAmount || 0) +
+                      (payment.cashAmount || 0) +
+                      (payment.cashOnTour || 0)
+                  ).toLocaleString()} ฿
+                </span>
+              </div>
+              <div class="flex justify-between items-center mt-2 text-sm">
+                <span class="text-gray-600">คงเหลือ</span>
+                <span id="remainingAmount" class="font-bold ${
+                  payment.totalAmount -
+                    ((payment.transferAmount || 0) +
+                      (payment.cashAmount || 0) +
+                      (payment.cashOnTour || 0)) >
+                  0
+                    ? "text-red-600"
+                    : "text-green-600"
+                }">
+                  ${Number(
+                    payment.totalAmount -
+                      ((payment.transferAmount || 0) +
+                        (payment.cashAmount || 0) +
+                        (payment.cashOnTour || 0))
+                  ).toLocaleString()} ฿
+                </span>
+              </div>
+            </div>
+
+            <!-- Save Button -->
+            <button 
+              id="savePaymentBtn"
+              onclick="savePaymentAmounts()"
+              class="w-full mt-3 px-4 py-2.5 bg-gradient-to-r from-green-600 to-emerald-600 text-white rounded-lg hover:shadow-lg transition-all font-semibold flex items-center justify-center disabled:opacity-70 disabled:cursor-not-allowed"
+            >
+              <span id="savePaymentSpinner" class="hidden w-5 h-5 border-2 border-white/30 border-t-white rounded-full animate-spin mr-2"></span>
+              <svg id="savePaymentIcon" class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+              </svg>
+              <span id="savePaymentText">บันทึกข้อมูลการชำระเงิน</span>
+            </button>
           </div>
         </div>
 
@@ -1525,6 +1633,143 @@
     `
       )
       .join("");
+  }
+
+  /**
+   * Calculate Total Paid Amount
+   */
+  function calculateTotalPaid() {
+    const transferAmount = parseFloat(
+      document.getElementById("transferAmount")?.value || 0
+    );
+    const cashAmount = parseFloat(
+      document.getElementById("cashAmount")?.value || 0
+    );
+    const cashOnTour = parseFloat(
+      document.getElementById("cashOnTour")?.value || 0
+    );
+
+    const totalPaid = transferAmount + cashAmount + cashOnTour;
+    const totalAmount = currentPayment?.totalAmount || 0;
+    const remaining = totalAmount - totalPaid;
+
+    // Update display
+    const totalPaidEl = document.getElementById("totalPaidAmount");
+    const remainingEl = document.getElementById("remainingAmount");
+
+    if (totalPaidEl) {
+      totalPaidEl.textContent = totalPaid.toLocaleString() + " ฿";
+    }
+
+    if (remainingEl) {
+      remainingEl.textContent = remaining.toLocaleString() + " ฿";
+      // Change color based on remaining amount
+      if (remaining > 0) {
+        remainingEl.className = "font-bold text-red-600";
+      } else {
+        remainingEl.className = "font-bold text-green-600";
+      }
+    }
+  }
+
+  /**
+   * Save Payment Amounts
+   */
+  function savePaymentAmounts() {
+    const session = getSessionFromStorage();
+    if (!session || !session.sessionToken) {
+      showToast("กรุณาเข้าสู่ระบบใหม่", "error");
+      return;
+    }
+
+    if (!currentPayment) {
+      showToast("ไม่พบข้อมูลการจอง", "error");
+      return;
+    }
+
+    const transferAmount = parseFloat(
+      document.getElementById("transferAmount")?.value || 0
+    );
+    const cashAmount = parseFloat(
+      document.getElementById("cashAmount")?.value || 0
+    );
+    const cashOnTour = parseFloat(
+      document.getElementById("cashOnTour")?.value || 0
+    );
+
+    // Validate amounts
+    if (transferAmount < 0 || cashAmount < 0 || cashOnTour < 0) {
+      showToast("จำนวนเงินต้องไม่ติดลบ", "error");
+      return;
+    }
+
+    // Show loading state
+    const btn = document.getElementById("savePaymentBtn");
+    const spinner = document.getElementById("savePaymentSpinner");
+    const icon = document.getElementById("savePaymentIcon");
+    const text = document.getElementById("savePaymentText");
+
+    if (btn && spinner && icon && text) {
+      btn.disabled = true;
+      spinner.classList.remove("hidden");
+      icon.classList.add("hidden");
+      text.textContent = "กำลังบันทึก...";
+    }
+
+    google.script.run
+      .withSuccessHandler(onPaymentAmountsSaved)
+      .withFailureHandler(onPaymentError)
+      .updatePaymentAmounts(
+        session.sessionToken,
+        currentPayment.bookingId,
+        transferAmount,
+        cashAmount,
+        cashOnTour
+      );
+  }
+
+  /**
+   * On Payment Amounts Saved
+   */
+  function onPaymentAmountsSaved(response) {
+    // Reset loading state
+    const btn = document.getElementById("savePaymentBtn");
+    const spinner = document.getElementById("savePaymentSpinner");
+    const icon = document.getElementById("savePaymentIcon");
+    const text = document.getElementById("savePaymentText");
+
+    if (btn && spinner && icon && text) {
+      btn.disabled = false;
+      spinner.classList.add("hidden");
+      icon.classList.remove("hidden");
+      text.textContent = "บันทึกข้อมูลการชำระเงิน";
+    }
+
+    if (!response.success) {
+      showToast(response.message || "ไม่สามารถบันทึกข้อมูลได้", "error");
+      return;
+    }
+
+    showToast("บันทึกข้อมูลการชำระเงินสำเร็จ!", "success");
+
+    // Close Modal after success
+    closeViewPaymentModal();
+
+    // Update current payment data
+    if (currentPayment) {
+      currentPayment.transferAmount = parseFloat(
+        document.getElementById("transferAmount")?.value || 0
+      );
+      currentPayment.cashAmount = parseFloat(
+        document.getElementById("cashAmount")?.value || 0
+      );
+      currentPayment.cashOnTour = parseFloat(
+        document.getElementById("cashOnTour")?.value || 0
+      );
+    }
+
+    // Reload payments list
+    loadPayments();
   }
 
   // Export function to window for main.html to call
