--- a/PagePrograms.html
+++ b/PagePrograms.html
@@ -296,9 +296,9 @@
             type="number"
             id="programAdultPrice"
             required
-            step="0.01"
             placeholder="0.00"
             class="input-modern"
+             onfocus="this.select()"
           />
         </div>
         <div>
@@ -309,9 +309,9 @@
             type="number"
             id="programChildPrice"
             required
-            step="0.01"
             placeholder="0.00"
             class="input-modern"
+            onfocus="this.select()"
           />
         </div>
       </div>
